Update jvm-optimization.md
更新jvm自定义参数