@@ -2,10 +2,6 @@
 
 大家从前面的教程都知道了服务器的基本启动参数, 本篇会更加详细地介绍
 
-## 通用参数
-
-和前面说过的一样, 在 [点击我生成优化参数](https://paper.8aka.org/misc/tools/start-script-gen) 生成即可
-
 ## Java 发行版专用参数
 
 :::warning 注意
@@ -14,16 +10,55 @@ java```
  和 ```
 -jar```
  参数中间添加
-这些参数均摘自笨蛋文档
+这些参数均摘自笨蛋文档与阿呆皮革厂
 :::
 
 :::warning 注意
-通常情况下 各发行版JVM参数不可混用 且参数并不是越多越好
+通常情况下 各发行版JVM参数可混用但无效果 且参数并不是越多越好
 添加过多参数 在一些情况下导致性能下降
 ~~10x slower(doge)~~
 :::
 
-### GraalVM EE
+## 自定义参数配置
+
+### JVM 内存管理优化
+
+```txt
+-XX:NewRatio=3                #调整新老生代GC比例减小老生代GC压力，一般不用
+-XX:SurvivorRatio=4           #调整生命周期，Eden区:Survivor区
+-XX:LargePageSizeInBytes=2m   #使用2MB大页内存（减少内存碎片，需系统支持）
+```
+
+### 垃圾回收（GC）优化
+
+```txt
+-XX:+UseG1GC                            # 使用G1垃圾收集器
+-XX:G1HeapRegionSize=32m                # 每个Region大小32MB（根据堆大小调整，1-32m）
+-XX:MaxGCPauseMillis=50                 # 目标最大GC停顿时间50ms（减少卡顿）
+-XX:G1NewSizePercent=20                 # 新生代最小占比20%
+-XX:G1MaxNewSizePercent=40              # 新生代最大占比40%
+-XX:G1RSetUpdatingPauseTimePercent=5    # 更新RSet的停顿时间占比
+-XX:G1ReservePercent=15                 # 预留15%内存防止OOM
+```
+
+### 性能与卡顿优化
+
+```txt
+-XX:-UseBiasedLocking                  #禁用偏向锁（减少同步开销）
+-XX:+AggressiveOpts                    # 启用激进优化（Java 8及以下有效）
+-XX:+UseAESIntrinsics                  # 启用AES硬件加速
+-XX:+UseFastAccessorMethods            # 优化原始类型访问
+-Djava.awt.headless=true               # 强制无头模式（无GUI，节省资源）
+```
+
+### 模组 / 插件兼容优化
+
+```txt
+-Dfml.ignoreInvalidMinecraftCertificates=true      # 忽略无效的Minecraft证书（模组加载用）
+-Dfml.ignorePatchDiscrepancies=true                # 忽略模组补丁差异（避免启动失败）
+```
+
+## GraalVM EE
 
 G1GC 参数:
 
@@ -37,13 +72,13 @@ ZGC 参数: (建议用于 Java 24+ 版本)
 `-XX:+UseZGC -XX:-ZProactive -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem -XX:+UseNUMA -XX:-DontCompileHugeMethods -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=8000 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:NmethodSweepActivity=1 -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority -XX:AllocatePrefetchStyle=1 -XX:+AlwaysActAsServerClassMachine -XX:+EagerJVMCI -XX:+UseStringDeduplication -XX:+UseAES -XX:+UseAESIntrinsics -XX:+UseFMA -XX:+UseLoopPredicate -XX:+RangeCheckElimination -XX:+OptimizeStringConcat -XX:+UseThreadPriorities -XX:+OmitStackTraceInFastThrow -XX:+RewriteBytecodes -XX:+RewriteFrequentPairs -XX:+UseFPUForSpilling -XX:+UseFastStosb -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXMMForArrayCopy -XX:+UseXmmI2D -XX:+UseXmmI2F -XX:+UseXmmLoadAndClearUpper -XX:+UseXmmRegToRegMoveAll -XX:+EliminateLocks -XX:+DoEscapeAnalysis -XX:+AlignVector -XX:+OptimizeFill -XX:+EnableVectorSupport -XX:+UseCharacterCompareIntrinsics -XX:+UseCopySignIntrinsic -XX:+UseVectorStubs -XX:UseAVX=2 -XX:UseSSE=4 -XX:+UseFastJNIAccessors -XX:+UseInlineCaches -XX:+SegmentedCodeCache -Djdk.nio.maxCachedBufferSize=262144 -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true -Dgraal.DetectInvertedLoopsAsCounted=true -Dgraal.LoopInversion=true -Dgraal.VectorizeHashes=true -Dgraal.EnterprisePartialUnroll=true -Dgraal.VectorizeSIMD=true -Dgraal.StripMineNonCountedLoops=true -Dgraal.SpeculativeGuardMovement=true -Dgraal.TuneInlinerExploration=1 -Dgraal.LoopRotation=true -Dgraal.OptWriteMotion=true -Dgraal.CompilerConfiguration=enterprise`
 ```
 
-### OpenJ9
+## OpenJ9
 
 ```txt
 `-XX:+IdleTuningGcOnIdle -XX:+UseAggressiveHeapShrink -XX:-OmitStackTraceInFastThrow -XX:+UseFastAccessorMethods -XX:+OptimizeStringConcat -Xshareclasses:allowClasspaths -Xshareclasses:cacheDir=./cache -Xaot -XX:+UseCompressedOops -XX:ObjectAlignmentInBytes=256 -Xshareclasses -XX:SharedCacheHardLimit=800M -Xtune:virtualized -XX:+TieredCompilation -XX:InitialTenuringThreshold=5 -Dlog4j2.formatMsgNoLookups=true -XX:-DisableExplicitGC`
 ```
 
-### Dragonwell
+## Dragonwell
 
 Java 8 版本参数:
 
